--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
   <body style="max-width:800px;margin: 0 auto">
     <h1>Brandon Thorn</h1>
     <h2>aka <em>proggR</em>/<em>sgtgroucho</em></h2>
-    <h3>Brief Background</h3>
+    <h3>Who Am I?</h3>
     <p>
-      Growing up in Madoc, ON, I've been hooked on the internet since childhood, using it to see and learn beyond my local context. I started programming in grade 10, worked 3 years in tech support during high school, and later attended St. Lawrence College's Computer Programmer Analyst (2008-11) program. Since then I've worked in government, academia, startups, and independent media as a programmer, architect, sysadmin, PM, founder, and Fractional CTO.
-    </p>
-    <h3>Dancing With DLT</h3>
-    <p>
-      In college, I discovered Bitcoin and decentralized tech, becoming fascinated by smart contracts. I remember BTC achieving USD parity (2011) and ETH as just a whitepaper (2014), was a member of the <a href="https://steemit.com/@proggr" target="_blank">Steemit Beta</a> (2016) and have been a diamond handed LINK fanboy since 2017. I've been writing smart contracts since 2018 and advocating for the ERC2535 (Diamonds Standard) as a revolutionary paradigm shift for EVM development since encountering the EIP in 2021. I've also played with CosmosSDK via Gnoland, and will be following its development, finding its "proof-of-contribution" consensus and DAO-of-DAOs ideas aligned with my <a href="https://wethecommonwealth.org" target="_blank">Commonwealth</a> project.
+      I'm a fullstack/blockchain/game dev who likes to play with new toys and experiment with zany ideas. Some interests include economics/finance, history, sociology/psychology, and communities. When put together, "socialcapitalism" has remained a core interest driving a lot of R&D projects.
     </p>
     <h3>What Drives Me?</h3>
     <p>
@@ -28,7 +24,7 @@
     </p>
     <h3>Ongoing Projects</h3>
     <ul>      
-      <li><strong><a href="https://deit.ca" target="_blank">DEIT</a></strong> (2020) &mdash; R&D brand for decentralized experimentation and development. Pivoting toward adding fund management/trading uses of the brand.</li>
+      <li><strong><a href="https://deit.ca" target="_blank">DEIT</a></strong> (2020) &mdash; R&D brand for decentralized experimentation and development. Pivoting toward adding fund management/trading uses of the brand as initially intended.</li>
       <li><strong><a href="https://wethecommonwealth.org" target="_blank">Commonwealth</a></strong> (2023) &mdash; A model for a new DAO managed Fiat currency, which includes W3C DID compliant Identity and a DAO-of-DAOs oriented governance service layer.<br/><strong>The thesis is:</strong> Monetary Base + ID + Federated Bottom-Up Governance = The foundation for a socialcapitalism featuring <a href="https://github.com/DEITrust/SI2" target="_blank">Social Insurance 2.0</a>.</li>      
       <li><strong><a href="https://github.com/DEITrust/shinyblocks" target="_blank">Shinyblocks</a></strong> (2023) &mdash; Inspired by Diamonds, Shinyblocks intends to encapsulate the ERC2535 spec in JS, while stretch goaling to supporting Hardhat deployments. WIP but still useful for simple smart contract interactions (used in most recent diamond-hardhat branch).</li>
       <li><strong><a href="https://proggr.hashnode.dev" target="_blank">Diamond Driven Development</a></strong> (2022) &mdash; A blog started as a means to capture the workflow/simplicity of ERC2535, has since become more general acting as the DEIT blog. Intend to spin "Diamond Driven Development" into its own brand.</li>
