--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <body style="max-width:800px;margin: 0 auto">
     <h1>Brandon Thorn</h1>
     <h2>aka <em>proggR</em>/<em>sgtgroucho</em></h2>
+    <div style="width:100%">
+    <img src="./eth_call.png" alt="2014 ETH Call Proof" style="width:100%"/>
+    <pre>Screenshot shared by a friend confirming I remember ETH when it was just a whitepaper.<br/><span style="font-weight:800; font-size: 0.8em;">PS:</span> You're welcome /r/uselessredcircle</pre>
+    </div>
+
     <h3>Who Am I?</h3>
     <p>
       I'm a fullstack/blockchain/game dev who likes to play with new toys and experiment with zany ideas. Some interests include economics/finance, history, sociology/psychology, and communities. When put together, "socialcapitalism" has remained a core interest driving a lot of R&D projects.
